--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "author": "Santiago Kent",
+  "author": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "oxfmt",
+    "lint": "oxlint --type-aware"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.22.0",
   "devEngines": {
@@ -17,5 +18,10 @@
       "version": "^1.3.4",
       "onFail": "download"
     }
+  },
+  "devDependencies": {
+    "oxfmt": "^0.17.0",
+    "oxlint": "^1.32.0",
+    "oxlint-tsgolint": "^0.8.5"
   }
 }
