--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "devEngines": {
     "runtime": {
       "name": "bun",
-      "version": "^1.3.4",
+      "version": "1.3.4",
       "onFail": "download"
     }
   },
   "devDependencies": {
     "oxfmt": "^0.17.0",
     "oxlint": "^1.32.0",
-    "oxlint-tsgolint": "^0.8.5"
+    "oxlint-tsgolint": "^0.8.5",
+    "typescript": "^5.9.3"
   }
 }
