--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "oxfmt",
-    "lint": "oxlint --type-aware"
+    "lint": "oxlint --type-aware --fix"
   },
   "keywords": [],
   "license": "ISC",
@@ -20,6 +20,7 @@
     }
   },
   "devDependencies": {
+    "lefthook": "^2.0.9",
     "oxfmt": "^0.17.0",
     "oxlint": "^1.32.0",
     "oxlint-tsgolint": "^0.8.5",
