--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     }
   },
   "devDependencies": {
+    "@types/bun": "^1.3.4",
     "lefthook": "^2.0.9",
     "oxfmt": "^0.17.0",
     "oxlint": "^1.32.0",
