--- a/lefthook.yml
+++ b/lefthook.yml
@@ -6,5 +6,5 @@ pre-commit:
       stage_fixed: true
 
     - name: format
-      run: pnpm format {staged_files}
+      run: pnpm format --no-error-on-unmatched-pattern {staged_files}
       stage_fixed: true
