--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "bun run --watch server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "bun run --bun vitest --run",
+    "test:watch": "bun run --bun vitest"
   },
   "keywords": [],
   "author": "",
