--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,11 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "bun --bun vite",
-    "build": "tsc -b && vite build",
-    "preview": "bun --bun vite preview"
+    "build": "pnpm generate-types && tsc -b && vite build",
+    "preview": "bun --bun vite preview",
+    "generate-types": "openapi-typescript ./node_modules/api-contract/openapi.json -o ./src/lib/api/types.d.ts"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.12",
+    "api-contract": "workspace:*",
+    "openapi-fetch": "^0.15.0",
+    "openapi-react-query": "^0.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.18"
@@ -20,6 +25,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "babel-plugin-react-compiler": "^1.0.0",
     "globals": "^16.5.0",
+    "openapi-typescript": "^7.10.1",
     "vite": "npm:rolldown-vite@7.2.5"
   }
 }
