--- a/apps/frontend/.oxlintrc.json
+++ b/apps/frontend/.oxlintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["../../.oxlintrc.json"],
   "rules": {
-    "unicorn/filename-case": ["error", { "cases": { "kebabCase": true, "pascalCase": true } }]
+    "unicorn/filename-case": ["error", { "cases": { "kebabCase": true, "pascalCase": true } }],
+    "eslint/max-lines-per-function": ["error", { "max": 300 }]
   }
 }
