--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "bun --bun vite",
     "build": "pnpm generate-types && tsc -b && vite build",
     "preview": "bun --bun vite preview",
-    "generate-types": "openapi-typescript ./node_modules/api-contract/openapi.json -o ./src/lib/api/types.d.ts"
+    "generate-types": "openapi-typescript ./node_modules/api-contract/openapi.json -o ./src/lib/api/types.d.ts",
+    "test": "bun --bun vitest --run",
+    "test:watch": "bun --bun vitest"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
@@ -20,11 +22,15 @@
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "babel-plugin-react-compiler": "^1.0.0",
     "globals": "^16.5.0",
+    "jsdom": "^27.3.0",
     "openapi-typescript": "^7.10.1",
     "vite": "npm:rolldown-vite@7.2.5"
   }
