--- a/libs/api-contract/package.json
+++ b/libs/api-contract/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "main": "./contract.ts",
   "types": "./contract.ts",
+  "files": [
+    "dist"
+  ],
   "exports": {
     ".": "./contract.ts",
     "./openapi.json": "./dist/openapi.json"
