--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "bun build ./server.ts --outdir ./dist",
+    "build": "bun build ./server.ts --target=bun --outdir ./dist",
     "dev": "bun run --watch server.ts",
+    "start": "bun run ./dist/server.js",
     "test": "bun run --bun vitest --run",
     "test:watch": "bun run --bun vitest",
     "type-check": "tsc --noEmit"
