--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -15,6 +15,8 @@ services:
   schemathesis:
     image: schemathesis/schemathesis
     command: run http://backend:3000/docs/openapi.json --continue-on-failure --max-examples 1000
+    volumes:
+      - ./schemathesis.toml:/app/schemathesis.toml:z
     depends_on:
       backend:
         condition: service_healthy
