--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,6 +15,13 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.22.0",
+  "engines": {
+    "runtime": {
+      "name": "bun",
+      "version": "1.3.4",
+      "onFail": "download"
+    }
+  },
   "dependencies": {
     "api-contract": "workspace:*",
     "h3": "2.0.1-rc.6",
