--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,6 +22,13 @@
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.18"
   },
+  "engines": {
+    "runtime": {
+      "name": "bun",
+      "version": "1.3.4",
+      "onFail": "download"
+    }
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
