--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "keywords": [],
   "license": "ISC",
   "packageManager": "pnpm@10.22.0",
-  "devEngines": {
+  "engines": {
     "runtime": {
       "name": "bun",
       "version": "1.3.4",
