feat(e2e): add e2e tests with playwright, along with docker, script and action

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -20,3 +20,11 @@ services:
     depends_on:
       backend:
         condition: service_healthy
+
+  e2e:
+    build:
+      context: .
+      dockerfile: apps/e2e/Dockerfile
+    command: pnpm -F e2e test
+    environment:
+      - CI=true
