--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,3 +49,12 @@ jobs:
 
       - name: Schema test
         run: ./schema-test.sh
+
+  e2e:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: E2E test
+        run: ./e2e-test.sh
