--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -2,13 +2,19 @@ FROM node:24-alpine AS base
 
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
-COPY . /app
+RUN corepack enable && corepack install -g pnpm@latest-10
+
 WORKDIR /app
+
+COPY pnpm-lock.yaml pnpm-workspace.yaml ./
+
+
+RUN pnpm fetch
 
 
 FROM base AS build
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm -F backend... install --frozen-lockfile
+COPY . ./
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm -F backend... install --frozen-lockfile --offline
 RUN pnpm -F backend... build
 RUN pnpm deploy -F backend --prod /prod/backend
 
