--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "turbo type-check",
     "test": "turbo test",
     "test:e2e": "./e2e-test.sh",
+    "test:schema": "./schema-test.sh",
     "format": "oxfmt",
     "lint": "oxlint --type-aware --fix"
   },
