chore: fix e2e script, separate schema testing in a separate job

--- a/apps/e2e/package.json
+++ b/apps/e2e/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:e2e": "plawright test"
+    "test:e2e": "playwright test"
   },
   "keywords": [],
   "author": "",
