--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,6 +47,12 @@ jobs:
       - name: Test
         run: pnpm test
 
+  schema:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
       - name: Schema test
         run: ./schema-test.sh
 
